# delphos-city

./: Cargo.toml  flake.nix
assets/: home.aseprite  person.aseprite
assets/shaders/: base.wgsl
crates/delphos-ecs/: Cargo.toml
crates/delphos-ecs/src/: bundle.rs  component.rs  entity.rs  lib.rs  query.rs  resource.rs  rwc.rs  world.rs
crates/delphos-math/: Cargo.toml
crates/delphos-math/src/: lib.rs  macros.rs  num.rs  vec2.rs
crates/delphos-render/: Cargo.toml
crates/delphos-render/src/: bind_group.rs  camera.rs  lib.rs  material.rs  render_queue.rs  resources.rs  shader.rs  structs.rs
crates/delphos-window/: Cargo.toml
crates/delphos-window/src/: app.rs  boilerplate.rs  lib.rs  macros.rs  open.rs  outputs.rs  resources.rs  window.rs
src/: main.rs
